--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,6 +82,7 @@ install(DIRECTORY launch config rviz
 
 catkin_install_python(PROGRAMS
   nodes/node_mower
+  nodes/node_mower_proxy
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
